--- a/XSLT/readme
+++ b/XSLT/readme
@@ -1,2 +1,2 @@
-This XSLT provides a basic transformation for the Kitāb al-ʾInṣāf's XML resource.
-The output is a number of HMTL files: the opening HTML contains an index structured as hyperlinks to the different chapters.
+This XSLT provides a basic transformation for the Kitāb al-ʾInṣāf's XML resource that outputs a number of HTML files. 
+The opening HTML ('insaf_TEI (SAMPLE).html') contains an index, made of hyperlinks to the different chapters.
